force-app/main/default/objects/Order/fields/from_SFCC__c.field-meta.xml
<CustomField>
    <fullName>from_SFCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field holds if this record created from Commerce Cloud</description>
    <inlineHelpText>This field holds if this record created from Commerce Cloud</inlineHelpText>
    <label>from SFCC</label>
    <type>Checkbox</type>
</CustomField>