force-app/main/default/objects/Order/fields/isContactIdExist__c.field-meta.xml
<CustomField>
    <fullName>isContactIdExist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field holds if the contact id exists within salesforce</description>
    <label>isContactIdExist</label>
    <type>Checkbox</type>
</CustomField>