force-app/main/default/objects/Order/fields/Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds order relationship with contact.</description>
    <inlineHelpText>This field holds order relationship with contact.</inlineHelpText>
    <label>Order Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>SCCOrders</relationshipName>
    <type>Lookup</type>
</CustomField>