force-app/main/default/objects/Order/fields/Order_SCCSync_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_SCCSync_Status__c</fullName>
    <description>This field holds Order Synchronised status with Salesforce Commerce Cloud.</description>
    <inlineHelpText>This field holds Order Synchronised status with Salesforce Commerce Cloud.</inlineHelpText>
    <label>Order SCC Sync Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Synchronised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>