force-app/main/default/objects/Order/fields/SFCC_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_Id__c</fullName>
    <label>SFCC Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>