force-app/main/default/objects/Order/fields/SFCC_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_Total__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Order total value.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Order total value.</inlineHelpText>
    <label>Order Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>