force-app/main/default/objects/Order/fields/SFCC_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Payment_Status__c</fullName>
    <description>Whether the payment has been made by the customer</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>not_paid</fullName>
                <label>Not Paid</label>
            </value>
            <value>
                <fullName>paid</fullName>
                <label>Paid</label>
            </value>
            <value>
                <fullName>part_paid</fullName>
                <label>Partly Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>