force-app/main/default/objects/Order/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <description>Status of the progress of the order</description>
    <label>Shipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not_shipped</fullName>
                <label>Not Shipped</label>
            </value>
            <value>
                <fullName>shipped</fullName>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>part_shipped</fullName>
                <label>Partly Shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>